Project with Powershell snap-in is added

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /Source/Ultramarine.Attribute/bin/Debug
 /Source/Ultramarine.Attribute/obj/Debug
 /Source/Ultramarine.Attribute/Ultramarine.Attribute.v12.suo
+/Source/Ultramarine.Attribute/packages
+/Source/Ultramarine.Attribute.Powershell/bin/Debug
+/Source/Ultramarine.Attribute.Powershell/obj/Debug
