Ignore list was updated

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /Source/Ultramarine.Attribute/packages
 /Source/Ultramarine.Attribute.Powershell/bin/Debug
 /Source/Ultramarine.Attribute.Powershell/obj/Debug
+/Source/Ultramarine.Attribute/bin/Release
+/Source/Ultramarine.Attribute/obj/Release
+/Source/Ultramarine.Attribute.Powershell/bin/Release
+/Source/Ultramarine.Attribute.Powershell/obj/Release
