Module publishing script was added

--- a/Source/Ultramarine.Attribute.Powershell/Ultramarine.Attribute.Powershell.csproj
+++ b/Source/Ultramarine.Attribute.Powershell/Ultramarine.Attribute.Powershell.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="publish-module.ps1" />
     <None Include="Tests\test.ps1" />
   </ItemGroup>
   <ItemGroup>
