--- a/Source/Ultramarine.Attribute.Powershell/Ultramarine.Attribute.Powershell.csproj
+++ b/Source/Ultramarine.Attribute.Powershell/Ultramarine.Attribute.Powershell.csproj
@@ -51,13 +51,16 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="publish-module.ps1" />
-    <None Include="Tests\test.ps1" />
+    <None Include="Tests\PhotoMetadata.Tests.ps1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.Attribute\Ultramarine.Attribute.csproj">
       <Project>{8029DE34-F69D-47DC-B887-7E43F1D18391}</Project>
       <Name>Ultramarine.Attribute</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
