--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -12,3 +12,4 @@
 /Source/Ultramarine.Attribute/obj/Release
 /Source/Ultramarine.Attribute.Powershell/bin/Release
 /Source/Ultramarine.Attribute.Powershell/obj/Release
+/Tools/packages
