Required parameter Path is added

--- a/Source/Ultramarine.Attribute.Powershell/Ultramarine.Attribute.Powershell.csproj
+++ b/Source/Ultramarine.Attribute.Powershell/Ultramarine.Attribute.Powershell.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Tests\cmdlet.tests.ps1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ultramarine.Attribute\Ultramarine.Attribute.csproj">
